# SolDecoders

./: Cargo.toml  Dockerfile  EVALUATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/soldecoders-api/: Cargo.toml
crates/soldecoders-api/src/: lib.rs  query.rs  schema.rs  types.rs
crates/soldecoders-core/: Cargo.toml
crates/soldecoders-core/src/: batch.rs  decoder.rs  lib.rs  registry.rs
crates/soldecoders-core/src/programs/: mod.rs  orca.rs  raydium.rs  spl_token.rs  system.rs
crates/soldecoders-node/: Cargo.toml
crates/soldecoders-node/benches/: decode_bench.rs
crates/soldecoders-node/src/: config.rs  decode.rs  lib.rs  main.rs  startup.rs  telemetry.rs
crates/soldecoders-types/: Cargo.toml
crates/soldecoders-types/src/: error.rs  event.rs  ids.rs  instruction.rs  lib.rs
monitoring/: prometheus.yml
postman/: SolDecoders.postman_collection.json
