[package]
name = "soldecoders-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GraphQL surface for SolDecoders: decode single instructions, whole transactions, and parallel batches, and list supported programs."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
soldecoders-types = { workspace = true }
soldecoders-core = { workspace = true }
async-graphql = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
