[package]
name = "soldecoders-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SolDecoders composition root: a GraphQL server plus a CLI for decoding instructions, with tracing and Prometheus metrics."
default-run = "soldecoders-node"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "soldecoders-node"
path = "src/main.rs"

[[bench]]
name = "decode_bench"
harness = false

[dependencies]
soldecoders-types = { workspace = true }
soldecoders-core = { workspace = true }
soldecoders-api = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
criterion = { workspace = true }
