[package]
name = "soldecoders-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core domain types for SolDecoders: Pubkey/Signature newtypes, raw instruction/transaction model, and the typed DecodedEvent hierarchy."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
